<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_palette"
        android:icon="@drawable/ic_search"
        android:title="@string/action_command_palette"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_export"
        android:icon="@drawable/ic_save"
        android:title="@string/action_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_import"
        android:icon="@drawable/ic_library"
        android:title="@string/action_import"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_reminders"
        android:icon="@drawable/ic_diagnostics"
        android:title="@string/action_reminders"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_build_integrity"
        android:icon="@drawable/ic_check"
        android:title="@string/action_build_integrity"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_verify_provenance"
        android:icon="@drawable/ic_check"
        android:title="@string/action_verify_provenance"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_help"
        android:title="@string/action_help"
        app:showAsAction="ifRoom" />
</menu>
